# GroveOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
bootloader/: Cargo.toml
bootloader/src/: boot_info.rs  heap.rs  main.rs  page_table.rs
kernel/: Cargo.toml  build.rs  config.toml  link.ld
kernel/.cargo/: config.toml
kernel/src/: main.rs
modules/common/: Cargo.toml
modules/common/src/: boot_info.rs  lib.rs
modules/fbcon/: Cargo.toml
modules/fbcon/src/: font.rs  lib.rs  text_buffer.rs  text_framebuffer.rs
modules/memory/: Cargo.toml
modules/memory/src/: err.rs  lib.rs  page_table.rs  physical_memory.rs  virtual_memory.rs
modules/memory/src/virt/: mod.rs  node.rs  node_allocator.rs
modules/test_module/: Cargo.toml
modules/test_module/src/: lib.rs
project_build/: Cargo.toml
project_build/src/: main.rs
runner/src/: main.rs
targets/: kernel.json
